<resources>
    <string name="app_name">week-3-task-Wilsona4</string>
    <string name="good_morning">Good morning!</string>
    <string name="good_night">Good night!</string>
    <string name="search">Search</string>
    <string name="profile_pic">profile_pic</string>
    <string name="name">Jane</string>
    <string name="location">San francisco, ca</string>
    <string name="follow_jane">Follow Jane</string>
    <string name="message">Message</string>
    <string name="image">image</string>
    <string name="see_more">See More</string>
    <string name="night_mode">Night Mode</string>
</resources>