<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_color"
                android:paddingTop="@dimen/button_corner_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_margin">

                    <TextView
                        android:id="@+id/tvAppbarTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/good_morning"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/appbar_text_size"
                        android:textStyle="bold"
                        android:gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginHorizontal="@dimen/image_margin"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintStart_toEndOf="@+id/tvAppbarTitle"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_hearts"
                        android:contentDescription="@string/image" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_menu_svg"
                        android:contentDescription="@string/image" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginVertical="@dimen/default_margin"
                android:background="@drawable/custom_search_view"
                app:iconifiedByDefault="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:queryBackground="@color/search_bar_background"
                app:queryHint="@string/search">

            </androidx.appcompat.widget.SearchView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"

        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:background="@color/background_color"
            tools:context=".MainActivity">

            <ImageView
                android:id="@+id/ivProfilePic"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="@dimen/profile_pic_margin"
                app:layout_constraintDimensionRatio="1:1"
                android:contentDescription="@string/profile_pic"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/profile_pic" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/name_margin"
                android:text="@string/name"
                android:fontFamily="@font/comfortaa_bold"
                android:textColor="@color/text_color"
                android:textSize="@dimen/name_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivProfilePic" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.33" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.66329116" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/location"
                android:textAllCaps="true"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvName" />

            <Button
                android:id="@+id/btFollow"
                style="@style/custom_button_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/follow_jane"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nightModeSwitch" />

            <Button
                android:id="@+id/btMessage"
                style="@style/custom_button_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/message"
                android:elevation="@dimen/button_corner_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btFollow" />

            <ImageView
                android:id="@+id/image11"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="@dimen/image_top_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/mini_uno"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btMessage"
                app:srcCompat="@drawable/rectangle_11"
                android:contentDescription="@string/image" />
            <ImageView
                android:id="@+id/image12"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="@dimen/image_top_margin"
                android:layout_marginHorizontal="@dimen/image_margin_mini"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/btMessage"
                app:srcCompat="@drawable/rectangle_12"
                android:contentDescription="@string/image" />

            <ImageView
                android:id="@+id/image13"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="@dimen/image_top_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginStart="@dimen/mini_three"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="@id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/btMessage"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/rectangle_13"
                android:contentDescription="@string/image" />

            <ImageView
                android:id="@+id/image21"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="@dimen/image_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/mini_uno"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image11"
                app:srcCompat="@drawable/rectangle_21"
                android:contentDescription="@string/image" />
            <ImageView
                android:id="@+id/image22"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="@dimen/image_margin"
                android:layout_marginHorizontal="@dimen/image_margin_mini"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/image12"
                app:srcCompat="@drawable/rectangle_22"
                android:contentDescription="@string/image" />

            <ImageView
                android:id="@+id/image23"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="@dimen/image_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginStart="@dimen/mini_three"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="@id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/image13"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/rectangle_23"
                android:contentDescription="@string/image" />

            <ImageView
                android:id="@+id/image31"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="@dimen/image_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/mini_uno"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image21"
                app:srcCompat="@drawable/rectangle_31"
                android:contentDescription="@string/image" />
            <ImageView
                android:id="@+id/image32"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="@dimen/image_margin"
                android:layout_marginHorizontal="@dimen/image_margin_mini"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/image22"
                app:srcCompat="@drawable/rectangle_32"
                android:contentDescription="@string/image" />

            <ImageView
                android:id="@+id/image33"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="@dimen/image_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginStart="@dimen/mini_three"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="@id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/image23"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/rectangle_33"
                android:contentDescription="@string/image" />

            <Button
                android:id="@+id/btSeeMore"
                style="@style/custom_button_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/name_margin"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/see_more"
                android:textStyle="bold"
                android:elevation="@dimen/button_corner_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image31"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <Switch
                android:id="@+id/nightModeSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/image_margin"
                android:checked="false"
                android:drawableStart="@drawable/ic_baseline_nights_stay_24"
                android:text="@string/night_mode"
                android:textColor="@color/text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLocation"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>